CB-3329 remove hostmetadata