@@ -20,8 +20,9 @@ import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.verifyZeroInteractions;
 import static org.mockito.Mockito.when;
 
-import java.io.IOException;
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -41,6 +42,7 @@ import com.sequenceiq.cloudbreak.api.endpoint.v4.common.DatabaseVendor;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.common.DetailedStackStatus;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.common.Status;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.database.base.DatabaseType;
+import com.sequenceiq.cloudbreak.api.endpoint.v4.stacks.base.InstanceStatus;
 import com.sequenceiq.cloudbreak.api.endpoint.v4.stacks.base.RecoveryMode;
 import com.sequenceiq.cloudbreak.cloud.model.VolumeSetAttributes;
 import com.sequenceiq.cloudbreak.cluster.api.ClusterApi;
@@ -49,7 +51,6 @@ import com.sequenceiq.cloudbreak.cluster.util.ResourceAttributeUtil;
 import com.sequenceiq.cloudbreak.common.json.Json;
 import com.sequenceiq.cloudbreak.common.service.TransactionService;
 import com.sequenceiq.cloudbreak.common.service.TransactionService.TransactionExecutionException;
-import com.sequenceiq.cloudbreak.common.type.HostMetadataState;
 import com.sequenceiq.cloudbreak.core.flow2.service.ReactorFlowManager;
 import com.sequenceiq.cloudbreak.domain.Blueprint;
 import com.sequenceiq.cloudbreak.domain.RDSConfig;
@@ -58,7 +59,6 @@ import com.sequenceiq.cloudbreak.domain.stack.Stack;
 import com.sequenceiq.cloudbreak.domain.stack.StackStatus;
 import com.sequenceiq.cloudbreak.domain.stack.cluster.Cluster;
 import com.sequenceiq.cloudbreak.domain.stack.cluster.host.HostGroup;
-import com.sequenceiq.cloudbreak.domain.stack.cluster.host.HostMetadata;
 import com.sequenceiq.cloudbreak.domain.stack.instance.InstanceGroup;
 import com.sequenceiq.cloudbreak.domain.stack.instance.InstanceMetaData;
 import com.sequenceiq.cloudbreak.exception.BadRequestException;
@@ -67,7 +67,6 @@ import com.sequenceiq.cloudbreak.message.CloudbreakMessagesService;
 import com.sequenceiq.cloudbreak.service.StackUpdater;
 import com.sequenceiq.cloudbreak.service.blueprint.BlueprintService;
 import com.sequenceiq.cloudbreak.service.hostgroup.HostGroupService;
-import com.sequenceiq.cloudbreak.service.hostmetadata.HostMetadataService;
 import com.sequenceiq.cloudbreak.service.rdsconfig.RdsConfigService;
 import com.sequenceiq.cloudbreak.service.resource.ResourceService;
 import com.sequenceiq.cloudbreak.service.stack.InstanceMetaDataService;
@@ -90,9 +89,6 @@ public class ClusterServiceTest {
 
     @Mock
     private StackService stackService;
-
-    @Mock
-    private HostMetadataService hostMetadataService;
 
     @Mock
     private RdsConfigService rdsConfigService;
@@ -166,26 +162,12 @@ public class ClusterServiceTest {
 
     @Test
     public void repairClusterHostGroupsHappyPath() {
-        InstanceGroup instanceGroup = new InstanceGroup();
-        instanceGroup.setInstanceGroupType(InstanceGroupType.CORE);
 
         HostGroup hostGroup1 = new HostGroup();
         hostGroup1.setName("hostGroup1");
         hostGroup1.setRecoveryMode(RecoveryMode.MANUAL);
-        hostGroup1.setInstanceGroup(instanceGroup);
-
-        HostMetadata host1Metadata = new HostMetadata();
-        host1Metadata.setHostName("host1Name");
-        host1Metadata.setHostGroup(hostGroup1);
-        host1Metadata.setHostMetadataState(HostMetadataState.UNHEALTHY);
-
-        HostMetadata host2Metadata = new HostMetadata();
-        host2Metadata.setHostName("host2Name.healthy");
-        host2Metadata.setHostGroup(hostGroup1);
-        host2Metadata.setHostMetadataState(HostMetadataState.HEALTHY);
-
-        Set<HostMetadata> hostMetadata = Set.of(host1Metadata, host2Metadata);
-        hostGroup1.setHostMetadata(hostMetadata);
+        InstanceMetaData host1 = getHost("host1", hostGroup1.getName(), InstanceStatus.SERVICES_UNHEALTHY, InstanceGroupType.CORE);
+        hostGroup1.setInstanceGroup(host1.getInstanceGroup());
 
         when(hostGroupService.getByCluster(eq(1L))).thenReturn(Set.of(hostGroup1));
         when(flowLogService.findAllByResourceIdOrderByCreatedDesc(1L)).thenReturn(Collections.emptyList());
@@ -195,11 +177,11 @@ public class ClusterServiceTest {
         underTest.repairCluster(1L, List.of("hostGroup1"), false, false);
 
         verify(stack, never()).getInstanceMetaDataAsList();
-        verify(flowManager).triggerClusterRepairFlow(eq(1L), eq(Map.of("hostGroup1", List.of("host1Name"))), eq(false));
+        verify(flowManager).triggerClusterRepairFlow(eq(1L), eq(Map.of("hostGroup1", List.of("host1"))), eq(false));
     }
 
     @Test
-    public void repairClusterNodeIdsHappyPath() throws IOException {
+    public void repairClusterNodeIdsHappyPath() {
         InstanceGroup instanceGroup = new InstanceGroup();
         instanceGroup.setInstanceGroupType(InstanceGroupType.CORE);
 
@@ -208,19 +190,13 @@ public class ClusterServiceTest {
         hostGroup1.setRecoveryMode(RecoveryMode.MANUAL);
         hostGroup1.setInstanceGroup(instanceGroup);
 
-        HostMetadata host1Metadata = new HostMetadata();
-        host1Metadata.setHostName("host1Name.healthy");
-        host1Metadata.setHostGroup(hostGroup1);
-        host1Metadata.setHostMetadataState(HostMetadataState.HEALTHY);
-
-        Set<HostMetadata> hostMetadata = Set.of(host1Metadata);
-        hostGroup1.setHostMetadata(hostMetadata);
-
         when(hostGroupService.getByCluster(eq(1L))).thenReturn(Set.of(hostGroup1));
 
         InstanceMetaData instance1md = new InstanceMetaData();
         instance1md.setInstanceId("instanceId1");
         instance1md.setDiscoveryFQDN("host1Name.healthy");
+        instance1md.setInstanceGroup(instanceGroup);
+        instanceGroup.setInstanceMetaData(Collections.singleton(instance1md));
 
         List<InstanceMetaData> instanceMetaData = List.of(instance1md);
 
@@ -273,17 +249,6 @@ public class ClusterServiceTest {
     }
 
     @Test
-    public void shouldThrowExceptionWhenNoMetaDataFoundDuringFailureReport() {
-        when(stackService.findByCrn(STACK_CRN)).thenReturn(stack);
-
-        BadRequestException exception = assertThrows(BadRequestException.class, () -> {
-            underTest.reportHealthChange(STACK_CRN, Set.of("host1"), Set.of());
-        });
-
-        assertEquals("No metadata information for the node: host1", exception.getMessage());
-    }
-
-    @Test
     public void shouldTriggerRecoveryInAutoRecoveryHostsAndUpdateHostMetaData() {
         Blueprint blueprint = new Blueprint();
         blueprint.setBlueprintText("{ \"Blueprints\": { \"blueprint_name\": \"MyBlueprint\" } }");
@@ -291,41 +256,46 @@ public class ClusterServiceTest {
 
         when(stackService.findByCrn(STACK_CRN)).thenReturn(stack);
 
-        HostMetadata hostMetadata1 = givenHost("host1", "hg1", RecoveryMode.AUTO, HostMetadataState.HEALTHY);
-        HostMetadata hostMetadata2 = givenHost("host2", "hg2", RecoveryMode.MANUAL, HostMetadataState.HEALTHY);
-
         RDSConfig rdsConfig = new RDSConfig();
         rdsConfig.setDatabaseEngine(DatabaseVendor.POSTGRES);
         when(rdsConfigService.findByClusterIdAndType(CLUSTER_ID, DatabaseType.CLOUDERA_MANAGER)).thenReturn(rdsConfig);
         when(clusterApiConnectors.getConnector(stack)).thenReturn(clusterApi);
         when(clusterApi.clusterModificationService()).thenReturn(clusterModificationService);
-        when(hostMetadataService.findHostsInCluster(CLUSTER_ID)).thenReturn(Set.of(hostMetadata1, hostMetadata2));
         when(cloudbreakMessagesService.getMessage(any(), anyCollection())).thenReturn("auto recovery").thenReturn("failed node");
+
+        InstanceMetaData host1 = getHost("host1", "master", InstanceStatus.SERVICES_HEALTHY, InstanceGroupType.GATEWAY);
+        when(instanceMetaDataService.findHostInStack(eq(stack.getId()), eq("host1"))).thenReturn(Optional.of(host1));
+
+        InstanceMetaData host2 = getHost("host2", "group2", InstanceStatus.SERVICES_HEALTHY, InstanceGroupType.GATEWAY);
+        when(instanceMetaDataService.findHostInStack(eq(stack.getId()), eq("host2"))).thenReturn(Optional.of(host2));
+
+        when(hostGroupService.getByClusterIdAndName(stack.getCluster().getId(), host1.getInstanceGroup().getGroupName()))
+                .thenReturn(Optional.of(getHostGroup(host1, RecoveryMode.AUTO)));
+        when(hostGroupService.getByClusterIdAndName(stack.getCluster().getId(), host2.getInstanceGroup().getGroupName()))
+                .thenReturn(Optional.of(getHostGroup(host2, RecoveryMode.MANUAL)));
+
+        when(instanceMetaDataService.findNotTerminatedForStack(eq(stack.getId()))).thenReturn(new HashSet<>(Arrays.asList(host1, host2)));
 
         underTest.reportHealthChange(STACK_CRN, Set.of("host1", "host2"), Set.of());
 
-        Map<String, List<String>> autoRecoveredNodes = Map.of("hg1", List.of("host1"));
+        Map<String, List<String>> autoRecoveredNodes = Map.of("master", List.of("host1"));
         verify(flowManager).triggerClusterRepairFlow(STACK_ID, autoRecoveredNodes, false);
         verify(cloudbreakMessagesService, times(1)).getMessage("cluster.autorecovery.requested", Collections.singletonList(autoRecoveredNodes));
         verify(cloudbreakEventService, times(1)).fireCloudbreakEvent(STACK_ID, "RECOVERY", "auto recovery");
-        verify(hostMetadataService, times(1)).saveAll(Set.of(hostMetadata1));
-        assertEquals(HostMetadataState.WAITING_FOR_REPAIR, hostMetadata1.getHostMetadataState());
 
         verify(cloudbreakMessagesService, times(1)).getMessage("cluster.failednodes.reported", Collections.singletonList(Set.of("host2")));
         verify(cloudbreakEventService, times(1)).fireCloudbreakEvent(STACK_ID, "RECOVERY", "failed node");
-        verify(hostMetadataService, times(1)).saveAll(Set.of(hostMetadata2));
-        assertEquals(HostMetadataState.UNHEALTHY, hostMetadata2.getHostMetadataState());
     }
 
     @Test
     public void shouldTriggerSync() {
         String hostFQDN = "host2Name.stopped";
-        HostMetadata hostMetadata = givenHost(hostFQDN, "hg2", RecoveryMode.MANUAL, HostMetadataState.HEALTHY);
-        InstanceMetaData instanceMd = new InstanceMetaData();
-        instanceMd.setDiscoveryFQDN(hostFQDN);
+        InstanceMetaData instanceMd = getHost(hostFQDN, "master", InstanceStatus.SERVICES_HEALTHY, InstanceGroupType.GATEWAY);
+        when(hostGroupService.getByClusterIdAndName(stack.getCluster().getId(), instanceMd.getInstanceGroup().getGroupName()))
+                .thenReturn(Optional.of(getHostGroup(instanceMd, RecoveryMode.MANUAL)));
+        when(instanceMetaDataService.findHostInStack(eq(stack.getId()), eq(hostFQDN))).thenReturn(Optional.of(instanceMd));
 
         when(stackService.findByCrn(STACK_CRN)).thenReturn(stack);
-        when(hostMetadataService.findHostsInCluster(CLUSTER_ID)).thenReturn(Set.of(hostMetadata));
         when(cloudbreakMessagesService.getMessage(any(), anyCollection())).thenReturn("failed node");
         when(instanceMetaDataService.getPrimaryGatewayInstanceMetadata(anyLong())).thenReturn(Optional.of(instanceMd));
         doNothing().when(flowManager).triggerStackSync(anyLong());
@@ -342,8 +312,10 @@ public class ClusterServiceTest {
         cluster.setBlueprint(blueprint);
 
         when(stackService.findByCrn(STACK_CRN)).thenReturn(stack);
-
-        HostMetadata hostMetadata = givenHost("host", "hg", RecoveryMode.AUTO, HostMetadataState.HEALTHY);
+        InstanceMetaData host1 = getHost("host1", "master", InstanceStatus.SERVICES_HEALTHY, InstanceGroupType.GATEWAY);
+        when(instanceMetaDataService.findHostInStack(eq(stack.getId()), eq("host1"))).thenReturn(Optional.of(host1));
+        when(hostGroupService.getByClusterIdAndName(stack.getCluster().getId(), host1.getInstanceGroup().getGroupName()))
+                .thenReturn(Optional.of(getHostGroup(host1, RecoveryMode.AUTO)));
 
         RDSConfig rdsConfig = new RDSConfig();
         rdsConfig.setDatabaseEngine(DatabaseVendor.POSTGRES);
@@ -353,54 +325,48 @@ public class ClusterServiceTest {
         doThrow(new FlowsAlreadyRunningException("Flow in action")).when(flowManager).triggerClusterRepairFlow(anyLong(), anyMap(), anyBoolean());
 
         assertThrows(FlowsAlreadyRunningException.class, () -> {
-            underTest.reportHealthChange(STACK_CRN, Set.of(hostMetadata.getHostName()), Set.of());
+            underTest.reportHealthChange(STACK_CRN, Set.of("host1"), Set.of());
         });
 
         verifyNoMoreInteractions(cloudbreakMessagesService);
         verifyNoMoreInteractions(cloudbreakEventService);
-        verifyNoMoreInteractions(hostMetadataService);
     }
 
     @Test
     public void shouldRegisterNewHealthyHosts() {
         when(stackService.findByCrn(STACK_CRN)).thenReturn(stack);
 
-        HostMetadata hostMetadata = getHost("host", "hg", RecoveryMode.AUTO, HostMetadataState.UNHEALTHY);
+        InstanceMetaData host1 = getHost("host1", "master", InstanceStatus.SERVICES_UNHEALTHY, InstanceGroupType.GATEWAY);
 
-        when(hostMetadataService.findHostsInCluster(CLUSTER_ID)).thenReturn(Set.of(hostMetadata));
+        when(instanceMetaDataService.findNotTerminatedForStack(eq(stack.getId()))).thenReturn(new HashSet<>(Arrays.asList(host1)));
+
         when(cloudbreakMessagesService.getMessage(any(), anyCollection())).thenReturn("recovery detected");
 
-        underTest.reportHealthChange(STACK_CRN, Set.of(), Set.of("host"));
+        underTest.reportHealthChange(STACK_CRN, Set.of(), Set.of("host1"));
 
-        verify(cloudbreakMessagesService).getMessage("cluster.recoverednodes.reported", Collections.singletonList(Set.of("host")));
+        verify(cloudbreakMessagesService).getMessage("cluster.recoverednodes.reported", Collections.singletonList(Set.of("host1")));
         verify(cloudbreakEventService).fireCloudbreakEvent(STACK_ID, "AVAILABLE", "recovery detected");
-        verify(hostMetadataService).saveAll(Set.of(hostMetadata));
-        assertEquals(HostMetadataState.HEALTHY, hostMetadata.getHostMetadataState());
+        assertEquals(InstanceStatus.SERVICES_HEALTHY, host1.getInstanceStatus());
     }
 
-    private HostMetadata givenHost(String hostName, String hostGroupName, RecoveryMode recoveryMode, HostMetadataState hostMetadataState) {
-        HostMetadata hostMetadata = getHost(hostName, hostGroupName, recoveryMode, hostMetadataState);
-
-        when(hostMetadataService.findHostInClusterByName(CLUSTER_ID, hostName)).thenReturn(Optional.of(hostMetadata));
-
-        return hostMetadata;
-    }
-
-    private HostMetadata getHost(String hostName, String hostGroupName, RecoveryMode recoveryMode, HostMetadataState hostMetadataState) {
+    private InstanceMetaData getHost(String hostName, String groupName, InstanceStatus instanceStatus, InstanceGroupType instanceGroupType) {
         InstanceGroup instanceGroup = new InstanceGroup();
-        instanceGroup.setInstanceGroupType(InstanceGroupType.GATEWAY);
+        instanceGroup.setInstanceGroupType(instanceGroupType);
+        instanceGroup.setGroupName(groupName);
 
+        InstanceMetaData instanceMetaData = new InstanceMetaData();
+        instanceMetaData.setDiscoveryFQDN(hostName);
+        instanceMetaData.setInstanceGroup(instanceGroup);
+        instanceMetaData.setInstanceStatus(instanceStatus);
+        instanceGroup.setInstanceMetaData(Collections.singleton(instanceMetaData));
+
+        return instanceMetaData;
+    }
+
+    private HostGroup getHostGroup(InstanceMetaData instanceMetaData, RecoveryMode recoveryMode) {
         HostGroup hostGroup = new HostGroup();
-        hostGroup.setName(hostGroupName);
+        hostGroup.setName(instanceMetaData.getInstanceGroupName());
         hostGroup.setRecoveryMode(recoveryMode);
-        hostGroup.setInstanceGroup(instanceGroup);
-
-        HostMetadata hostMetadata = new HostMetadata();
-        hostMetadata.setHostName(hostName);
-        hostMetadata.setHostGroup(hostGroup);
-        hostMetadata.setHostMetadataState(hostMetadataState);
-        hostGroup.setHostMetadata(Set.of(hostMetadata));
-
-        return hostMetadata;
+        return hostGroup;
     }
 }
